@@ -358,7 +358,8 @@ And here is a list of other image manipulation methods you can call:<br>
   antialias=&gt;{true, false}, x=&gt;<i>integer</i>, y=&gt;<i>integer</i>,
   translate=&gt;<i>float, float</i>, scale=&gt;<i>float, float</i>,
   rotate=&gt;<i>float</i>. skewX=&gt;<i>float</i>, skewY=&gt;<i> float</i>,
-	align=&gt;{Left, Center, Right} </td>
+	align=&gt;{Left, Center, Right},
+	encoding=&gt;{None, SJIScode, Unicode}, unicode=&gt;{True, False}, </td>
   <td>annotate an image with text. See <a href="#misc">QueryFontMetrics</a>
  to get font metrics without rendering any text.</td>
  </tr>
@@ -427,14 +428,14 @@ color name</a></i></td>
  <td>Composite</td>
   <td> image=&gt;<i>image-handle</i>,
   compose=&gt;{Over, In, Out, Atop, Xor, Plus, Minus, Add, Subtract,
-	  Difference, Multiply, Bumpmap, Copy, CopyRed, CopyGreen, CopyBlue,
-		CopyMatte, Dissolve, Clear, Displace, Modulate, Threshold},
+    Difference, Multiply, Bumpmap, Copy, CopyRed, CopyGreen, CopyBlue,
+    CopyMatte, Dissolve, Clear, Displace, Modulate, Threshold},
     mask=&gt;<i>image-handle</i>, geometry=&gt;<i>geometry</i>,
     x=&gt;<i>integer</i>, y=&gt;<i>integer</i>,
     gravity=&gt;{NorthWest, North, NorthEast, West, Center, East, SouthWest,
-		South, SouthEast}</i>, opacity=&gt;<i>integer</i>, tile=&gt;{True, False},
+    South, SouthEast}</i>, opacity=&gt;<i>integer</i>, tile=&gt;{True, False},
     rotate=&gt;<i>double</i>, color=&gt;<i><a href="color.html">color name</a>
-		</i>
+   </i>
 
 </td>
   <td>composite one image onto another</td>
